--- a/slides/lecture02.tex
+++ b/slides/lecture02.tex
@@ -11,12 +11,7 @@
 \frame{\tableofcontents}
 
 
-\section[Theory]{From Theory to Design}
-\frame{\tableofcontents[currentsection]}
-% deriving hypotheses from theory and manipulations from hypotheses
-
-
-\subsection{Translating Hypotheses into Designs}
+\section[Hypotheses > Design]{Translating Hypotheses into Designs}
 \frame{\tableofcontents[currentsection,currentsubsection,subsubsectionstyle=hide]}
 
 
@@ -176,7 +171,7 @@ These days, Democrats and Republicans differ from one another considerably. The 
 \questions
 
 
-\subsection{Assessing Quality}
+\section{Assessing Quality}
 \frame{\tableofcontents[currentsection,currentsubsection,subsubsectionstyle=hide]}
 
 \frame{
@@ -371,7 +366,7 @@ The best criterion for evaluating the quality of an experiment is whether it man
 
 
 
-\subsection[Examples]{Common Paradigms and Examples}
+\section[Examples]{Common Paradigms and Examples}
 \frame{\tableofcontents[currentsection,currentsubsection,subsubsectionstyle=hide]}
 
 
@@ -721,7 +716,7 @@ Imagine that you were living in a village in another district in Uttar Pradesh a
 \questions
 
 
-\subsection[More Designs]{More Advanced Designs}
+\section[More Designs]{More Advanced Designs}
 \frame{\tableofcontents[currentsection,currentsubsection,subsubsectionstyle=hide]}
 
 \frame{
@@ -1051,11 +1046,12 @@ We can estimate this using (dummy variable) OLS, assuming:
 
 \begin{itemize}\itemsep1em
 \item Get a sense of what can be studied survey-experimentally
-\item Visit Time-Sharing Experiments for the Social Sciences
-	\begin{itemize}
-	\item \url{http://tessexperiments.org}
+\item Look at three studies from TESS
+	\begin{itemize}\footnotesize
+	\item \url{http://tessexperiments.org/data/whillans626.html}
+	\item \url{http://tessexperiments.org/data/malhotra634.html}
+	\item \url{http://tessexperiments.org/data/nair644.html}
 	\end{itemize}
-\item Pick two studies from TESS
 \item We will share them tomorrow
 \end{itemize}
 
