--- a/slides/lecture01.tex
+++ b/slides/lecture01.tex
@@ -140,7 +140,7 @@ All material for the course is available at:\\
 
 \vspace{1em}
 
-\url{http://www.thomasleeper.com/surveyexpcourse/}
+\large\url{http://www.thomasleeper.com/surveyexpcourse/}
 \end{center}
 
 }
@@ -273,12 +273,13 @@ Hadley Cantril (1940) asks 3000 Americans either:
 
 \begin{columns}
 \begin{column}[t]{.5\textwidth}
-\onslide<2->{Do you think the U.S. should do more than it is now doing to help England and France?}
+\onslide<2->{Do you think the U.S. should do more than it is now doing to help England and France?
 \vspace{1em}
 \begin{itemize}
 \item Yes\onslide<4->{: 13\%}
 \item No
 \end{itemize}
+}
 \end{column}
 \begin{column}[t]{.5\textwidth}
 \onslide<3->{Do you think the U.S. should do more than it is now doing to help England and France \textcolor{red}{in their fight against Hitler}?
