--- a/slides/lecture02.tex
+++ b/slides/lecture02.tex
@@ -818,7 +818,7 @@ If you take a white one, answer the question: ``Were you born in the lunar year 
 
 \frametitle{Conjoint Analysis}
 
-\begin{itemize}\itemsep1em
+\begin{itemize}
 \item Surveys measure \textit{stated} preferences
 \item Conjoint analysis involves measuring \textit{revealed} preferences based upon a series of forced-choice decisions
 
@@ -890,7 +890,7 @@ If you take a white one, answer the question: ``Were you born in the lunar year 
 \frametitle{{\normalsize Conjoint 1: Brexit Negotiations}}
 
 \begin{center}
-\includegraphics[height=.9\textheight]{images/brexit-conjoint-screenshot}
+\includegraphics[height=.8\textheight]{images/brexit-conjoint-screenshot}
 \end{center}
 }
 
@@ -1046,12 +1046,17 @@ We can estimate this using (dummy variable) OLS, assuming:
 
 \begin{itemize}\itemsep1em
 \item Get a sense of what can be studied survey-experimentally
-\item Look at three studies from TESS
-	\begin{itemize}\footnotesize
-	\item \url{http://tessexperiments.org/data/whillans626.html}
-	\item \url{http://tessexperiments.org/data/malhotra634.html}
-	\item \url{http://tessexperiments.org/data/nair644.html}
-	\end{itemize}
+\item Look at three studies from TESS\\
+
+\vspace{0.5em}
+
+{\footnotesize
+\url{http://tessexperiments.org/data/whillans626.html}\\
+\url{http://tessexperiments.org/data/malhotra634.html}\\
+\url{http://tessexperiments.org/data/nair644.html}\\
+}
+\vspace{0.5em}
+
 \item We will share them tomorrow
 \end{itemize}
 
